# TinyGraphics

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .prettierrc  CMakeLists.txt  README.md  build.bat  xmake.lua
example/: Bresenham直线算法.cpp  ImGui-示例.cpp  opencv.cpp  材质.cpp  示例.cpp  置顶窗口.cpp
resource/ui/: main.css
tg/: Color.h  FixedCanvas2D.h  Point.h  Rect.h  base.h  main.cpp  utils.cpp  utils.h
tg/ui/: FixedCanvas2D.cpp  FixedCanvas2D.h  window.cpp  window.h
ui/: MainWindow.h  main.cpp  test.cpp  矩形剪裁.cpp  矩形去重.cpp  示例.cpp
